force-app/main/default/objects/Solution_Provider_Contact__c/Solution_Provider_Contact__c.object-meta.xml
<CustomObject>
    <label>Solution Provider Contact</label>
    <nameField>
        <displayFormat>SPC-{0000000}</displayFormat>
        <label>Solution Provider Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Provider Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>