force-app/main/default/objects/Solution_Provider_Contact__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Address field</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>