force-app/main/default/objects/Solution_Provider_Contact__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Address field</description>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>