force-app/main/default/objects/Solution_Provider_Contact__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>Phone extension.</description>
    <label>Extension</label>
    <length>6</length>
    <type>Text</type>
</CustomField>