force-app/main/default/objects/Solution_Provider_Contact__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Useful for historical tracking - probably good to invert (make the field be &quot;Active&quot;)</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>