force-app/main/default/objects/Solution_Provider_Contact__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <length>72</length>
    <type>Text</type>
</CustomField>