force-app/main/default/objects/Solution_Provider_Contact__c/fields/Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact__c</fullName>
    <label>Key Contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPV</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>IS</fullName>
            </value>
            <value>
                <fullName>ISV</fullName>
            </value>
            <value>
                <fullName>Prod Partner</fullName>
            </value>
            <value>
                <fullName>Strategic Alliance</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>