force-app/main/default/objects/Solution_Provider_Contact__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Primary Phone number</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>