force-app/main/default/objects/Solution_Provider_Contact__c/fields/Service_Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associates contact to service provider</description>
    <label>Solution Provider</label>
    <referenceTo>Solution_Provider__c</referenceTo>
    <relationshipLabel>Solution Provider Contact</relationshipLabel>
    <relationshipName>Solution_Provider_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>