force-app/main/default/objects/Solution_Provider_Contact__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Address field</description>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>